# flauncher

./: README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  state.rs
src-tauri/src/services/: minecraft.rs
src/components/Header/: Header.tsx  style.module.css
src/components/Home/LaunchButton/: LaunchButton.tsx  style.module.css
src/components/Home/NewsComponent/: NewsBlock.module.css  NewsBlock.tsx
src/components/Home/Vectors/: Vector.tsx  style.module.css
src/components/Modal/: Modal.tsx  style.module.css
src/components/Profile/MainInfo/: MainInfo.tsx  style.module.css
src/components/Profile/MainInfo/CoinsComponent/: CoinsComponent.tsx  style.module.css
src/components/Profile/MainInfo/MainProfileComponent/: MainProfile.tsx  style.module.css
src/components/Profile/SkinSection/: SkinSection.tsx  style.module.css
src/components/SkinsLib/: MinecraftSkinViewer.tsx
src/configs/: api.config.ts  page.config.ts
src/hooks/: useLogin.ts  useNews.ts  useProfile.ts  useRegister.ts
src/layouts/: Layout.tsx
src/pages/AuthPages/: Login.tsx  Register.tsx  style.module.css
src/pages/Home/: Home.tsx  style.module.css
src/pages/Profile/: Profile.tsx  style.module.css
src/providers/: AuthProvider.tsx
src/routes/: PrivateRoute.tsx
src/services/: auth.service.ts  news.service.ts  profile.service.ts  skins.service.ts
src/types/: auth.type.ts  news.type.ts  profile.type.ts
src/utils/: axios.ts
(+2 files in other folders)
